--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Creator URL</title>
+    <title>King & The Sting</title>
 
     <meta
       name="description"
-      content="Zmags is a content creation tool used to create and publish experiences to your website"
+      content="King & The sting"
     />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -31,7 +31,7 @@
 
     <link
       rel="shortcut icon"
-      href="https://res.cloudinary.com/mselbekk-com/image/upload/v1584481174/z_aw9bmt.png"
+      href="https://res.cloudinary.com/mselbekk-com/image/upload/v1588377729/browser-icon_czzezz.png"
       type="image/x-icon"
     />
     <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700,800&display=swap" rel="stylesheet"> -->
@@ -108,6 +108,7 @@
       <div class="box content">
         <img src="/img/kands.png">
         <button>Send some fuck shit to Nick</button>
+        <link rel="stylesheet" type="text/css" href="//c.zmags.com/static/styles.css" /><div class="zmags-viewer-container" data-experience="5eacb9f0ad042374c9963f03"></div><script defer type="text/javascript"  src="//c.zmags.com/static/manifest.js"></script><script defer type="text/javascript"  src="//c.zmags.com/static/vendor.js"></script><script defer type="text/javascript"  src="//c.zmags.com/static/client.js"></script>
         <!-- <div class="the-crew">
         <img class="space" src="/img/1-icon.png">
         <img class="space" src="/img/2-icon.png">
