--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
 
+    <link rel="stylesheet" type="text/css" href="//c.zmags.com/static/styles.css" />
+
     <!-- CSS  -->
     <link
       href="css/style.css"
@@ -108,7 +110,8 @@
       <div class="box content">
         <img src="/img/kands.png">
         <button>Send some fuck shit to Nick</button>
-        <link rel="stylesheet" type="text/css" href="//c.zmags.com/static/styles.css" /><div class="zmags-viewer-container" data-experience="5eacb9f0ad042374c9963f03"></div><script defer type="text/javascript"  src="//c.zmags.com/static/manifest.js"></script><script defer type="text/javascript"  src="//c.zmags.com/static/vendor.js"></script><script defer type="text/javascript"  src="//c.zmags.com/static/client.js"></script>
+        <div class="zmags-viewer-container" data-experience="5eacb9f0ad042374c9963f03"></div>
+        <div class="zmags-viewer-container" data-experience="5eacbd32faf7ea43d5b33150"></div>
         <!-- <div class="the-crew">
         <img class="space" src="/img/1-icon.png">
         <img class="space" src="/img/2-icon.png">
@@ -128,7 +131,7 @@
 
 
     </div>
-
+    <script defer type="text/javascript"  src="//c.zmags.com/static/manifest.js"></script><script defer type="text/javascript"  src="//c.zmags.com/static/vendor.js"></script><script defer type="text/javascript"  src="//c.zmags.com/static/client.js"></script>
     <script src="/index.js"></script>
   </body>
 
